--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <p class="par">Welcome to the programming world<br> Free Courses are avaliable here
             </p>
 
-            <button class="cn"><a href="#">MYSQL</a></button>
-            <button class="cn"><a href="#">JAVA</a></button>
+            <button class="cn"><a href="mysql.html">MYSQL</a></button>
+            <button class="cn"><a href="java.html">JAVA</a></button>
 
                 <div class="form">
                     <h2>Login Here</h2>
