--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">COURSE</a></li>
                     <li><a href="service.html">SERVICES</a></li>
