--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="#">COURSE</a></li>
                     <li><a href="service.html">SERVICES</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
@@ -36,8 +36,9 @@
             <p class="par">Welcome to the programming world<br> Free Courses are avaliable here
             </p>
 
-            <button class="cn"><a href="mysql.html">MYSQL</a></button>
-            <button class="cn"><a href="java.html">JAVA</a></button>
+            <button class="cn"><a href="sql-basic.html">PL/SQL</a></button>
+            <button class="cn"><a href="#">JAVA</a></button>
+            <button class="cn"><a href="dbms_overview.html">DBMS</a></button>
 
                 <div class="form">
                     <h2>Login Here</h2>
