--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,14 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="#">COURSE</a></li>
+                    <li class="dropdown" onmouseover="showCourses()" onmouseout="hideCourses()">
+                      <a href="#">COURSES</a>
+                      <div class="dropdown-content">
+                        <a href="dbms_overview.html">DBMS</a>
+                        <a href="sql-basic.html">PL/SQL</a>
+                        <a href="java-basic.html">JAVA</a>
+                      </div>
+                  </li>
                     <li><a href="service.html">SERVICES</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
@@ -52,6 +59,6 @@
         </div> 
         
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
