--- a/ebm.html
+++ b/ebm.html
@@ -18,8 +18,15 @@
             <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">COURSE</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li class="dropdown" onmouseover="showCourses()" onmouseout="hideCourses()">
+                        <a href="#">COURSES</a>
+                        <div class="dropdown-content">
+                          <a href="dbms_overview.html">DBMS</a>
+                          <a href="sql-basic.html">PL/SQL</a>
+                          <a href="#">JAVA</a>
+                        </div>
+                    </li>
                     <li><a href="service.html">SERVICES</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
@@ -33,7 +40,7 @@
         
         <div class="sidenav">
             <h2>DBMS</h2>
-            <a href="java.html">DBMS-Overview</a>
+            <a href="dbms_overview.html">DBMS-Overview</a>
             <a href="architecture.html">DBMS-Architecture</a>
             <a href="data-models.html">DBMS-Data Models</a>
             <a href="data-schemes.html">DBMS-Data Schemas</a>
@@ -50,7 +57,7 @@
         </div>
         
         <div class="main">
-        <h2>DBMS-Overview</h2>
+        <h2>DBMS-ER Basic Concepts</h2>
 
         <p>The ER model defines the conceptual view of a database. It works around real-world entities and the associations among them. At view level, the ER model is considered a good option for designing databases.</p>
 <h2>Entity</h2>
@@ -112,6 +119,6 @@
         </div>
 
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
