--- a/erbc.html
+++ b/erbc.html
@@ -18,8 +18,15 @@
             <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">COURSE</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li class="dropdown" onmouseover="showCourses()" onmouseout="hideCourses()">
+                        <a href="#">COURSES</a>
+                        <div class="dropdown-content">
+                          <a href="dbms_overview.html">DBMS</a>
+                          <a href="sql-basic.html">PL/SQL</a>
+                          <a href="#">JAVA</a>
+                        </div>
+                    </li>
                     <li><a href="service.html">SERVICES</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
@@ -33,7 +40,7 @@
         
         <div class="sidenav">
             <h2>DBMS</h2>
-            <a href="java.html">DBMS-Overview</a>
+            <a href="dbms_overview.html">DBMS-Overview</a>
             <a href="architecture.html">DBMS-Architecture</a>
             <a href="data-models.html">DBMS-Data Models</a>
             <a href="data-schemes.html">DBMS-Data Schemas</a>
@@ -50,7 +57,7 @@
         </div>
         
         <div class="main">
-        <h2>DBMS-Overview</h2>
+        <h2>DBMS-ER Diagram Representation</h2>
 
         <p>Let us now learn how the ER Model is represented by means of an ER diagram. Any object, for example, entities, attributes of an entity, relationship sets, and attributes of relationship sets, can be represented with the help of an ER diagram.</p>
 <h2>Entity</h2>
@@ -90,6 +97,6 @@
         </div>
 
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
